<resources>
    <string name="app_name">Dementia-Memory</string>
    <string name="app_success_title">Success</string>
    <string name="app_success">Phantastic, You made it!</string>
    <string name="app_failed_title">Failed</string>
    <string name="app_failed">Oops, You failed!</string>
    <string name="menu_again">Again</string>
    <string name="opt_Easy">Heavy dementia mode</string>
    <string name="opt_Difficult">Dementia mode</string>
    <string name="opt_Impossible">Wise guy mode</string>
    <string name="help_TouchCard">Touch an undisclosed card to flip.</string>
    <string name="descript_card1">Card 1</string>
    <string name="descript_card2">Card 2</string>
    <string name="btn_back">Back to difficulty selection</string>
</resources>
