<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/helptext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/help_TouchCard"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="6dp"
            android:onClick="touchCard1"
            android:scaleType="centerInside"
            android:src="@drawable/card_back"
            android:contentDescription="@string/descript_card1" />

        <ImageView
            android:id="@+id/card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="6dp"
            android:onClick="touchCard2"
            android:scaleType="centerInside"
            android:src="@drawable/card_back"
            android:contentDescription="@string/descript_card2" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:onClick="returnToMainActivity"
        android:text="@string/btn_back" />

</LinearLayout>
